--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "bookings-bnb",
   "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "https://ionicframework.com/",
+  "author": "robertstephens225@hotmail.com",
+  "homepage": "https://github.com/trekkabout",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
