added pages and tabs

--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -1,5 +1,5 @@
 {
-  "appId": "com.bookings-bnb",
+  "appId": "com.bookings.bnb",
   "appName": "bookings-bnb",
   "bundledWebRuntime": false,
   "npmClient": "npm",
